genson-cli/tests/snapshots/normalise__avro_labels_map_of_structs.snap
---
source: genson-cli/tests/normalise.rs
expression: avro_str
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "document",
      "type": {
        "type": "map",
        "values": {
          "type": "record",
          "name": "document_extensions",
          "namespace": "genson",
          "fields": [
            {
              "name": "language",
              "type": "string"
            },
            {
              "name": "value",
              "type": "string"
            }
          ]
        },
        "name": "document"
      }
    }
  ]
}
