genson-cli/tests/snapshots/normalise__avro_labels_wrap_map_of_structs.snap
---
source: genson-cli/tests/normalise.rs
expression: avro_str
info:
  input:
    - en:
        language: en
        value: Jack Bauer
      fr:
        language: fr
        value: Jack Bauer
    - en:
        language: en
        value: happiness
      fr:
        language: fr
        value: bonheur
      rn:
        language: rn
        value: Umunezero
---
{
  "type": "record",
  "name": "document",
  "namespace": "genson",
  "fields": [
    {
      "name": "labels",
      "type": {
        "name": "labels",
        "type": "map",
        "values": {
          "name": "labels_values",
          "type": "map",
          "values": "string"
        }
      }
    }
  ]
}
