genson-cli/tests/snapshots/normalise__normalise_empty_map.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - id: A
      labels: {}
    - id: B
      labels:
        en: Hello
---
{"id":"A","labels":null}
{"id":"B","labels":{"en":"Hello"}}
