genson-cli/tests/snapshots/normalise__normalise_force_scalar_promotion.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  approved: false
  args:
    - "--normalise"
    - "--ndjson"
    - "--force-scalar-promotion"
    - precision
  input:
    - precision: 11
---
{
  "precision": {
    "precision__integer": 11
  }
}
