genson-cli/tests/snapshots/normalise__normalise_labels_map_of_structs.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - en:
        language: en
        value: Jack Bauer
      fr:
        language: fr
        value: Jack Bauer
    - en:
        language: en
        value: happiness
      fr:
        language: fr
        value: bonheur
      rn:
        language: rn
        value: Umunezero
---
{
  "document": null
}
{
  "document": null
}
