genson-cli/tests/snapshots/normalise__normalise_labels_wrap_map_of_structs.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - en:
        language: en
        value: Jack Bauer
      fr:
        language: fr
        value: Jack Bauer
    - en:
        language: en
        value: happiness
      fr:
        language: fr
        value: bonheur
      rn:
        language: rn
        value: Umunezero
---
{
  "labels": [
    {
      "key": "en",
      "value": [
        {
          "key": "language",
          "value": "en"
        },
        {
          "key": "value",
          "value": "Jack Bauer"
        }
      ]
    },
    {
      "key": "fr",
      "value": [
        {
          "key": "language",
          "value": "fr"
        },
        {
          "key": "value",
          "value": "Jack Bauer"
        }
      ]
    }
  ]
}
{
  "labels": [
    {
      "key": "en",
      "value": [
        {
          "key": "language",
          "value": "en"
        },
        {
          "key": "value",
          "value": "happiness"
        }
      ]
    },
    {
      "key": "fr",
      "value": [
        {
          "key": "language",
          "value": "fr"
        },
        {
          "key": "value",
          "value": "bonheur"
        }
      ]
    },
    {
      "key": "rn",
      "value": [
        {
          "key": "language",
          "value": "rn"
        },
        {
          "key": "value",
          "value": "Umunezero"
        }
      ]
    }
  ]
}
