genson-cli/tests/snapshots/normalise__normalise_map_threshold.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - id: A
      labels:
        en: Hello
    - id: B
      labels:
        fr: Bonjour
---
{"id":"A","labels":{"en":"Hello"}}
{"id":"B","labels":{"fr":"Bonjour"}}
