genson-cli/tests/snapshots/normalise__normalise_missing_field.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - foo: present
    - bar: 123
---
{"foo":"present","bar":null}
{"foo":null,"bar":123}
