genson-cli/tests/snapshots/normalise__normalise_ndjson.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - id: Q1
      aliases: []
      labels: {}
      description: Example entity
    - id: Q2
      aliases:
        - Sample
      labels:
        en: Hello
      description: ~
    - id: Q3
      aliases: ~
      labels:
        fr: Bonjour
      description: Third one
    - id: Q4
      aliases:
        - X
        - Y
      labels: {}
      description: ""
---
{"id":"Q1","aliases":null,"labels":{"en":null,"fr":null},"description":"Example entity"}
{"id":"Q2","aliases":["Sample"],"labels":{"en":"Hello","fr":null},"description":null}
{"id":"Q3","aliases":null,"labels":{"en":null,"fr":"Bonjour"},"description":"Third one"}
{"id":"Q4","aliases":["X","Y"],"labels":{"en":null,"fr":null},"description":""}
