genson-cli/tests/snapshots/normalise__normalise_null_vs_missing_field.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - foo: ~
      bar: 1
    - bar: 2
---
{"foo":null,"bar":1}
{"foo":null,"bar":2}
