genson-cli/tests/snapshots/normalise__normalise_object_or_array.snap
---
source: genson-cli/tests/normalise.rs
expression: value
info:
  input:
    - foo:
        - bar: 1
    - foo:
        bar: 2
---
{"foo":[{"bar":1}]}
{"foo":[{"bar":2}]}
